<resources>
    <string name="app_name">Payolle</string>
    <string name="action_settings">Ajustes</string>
    <string name="accessibility_img">Il s\'agit d\'une image</string>
    <string name="mod_global__sin_conexion_a_internet">Sin conexión a internet</string>
    <string name="mod_global__no_dispones_de_conexion_a_internet">No hay conexión a internet.
        Conectaté a internet e inténtalo de nuevo.
    </string>
    <string name="mod_global__cargando">Cargando ...</string>
    <string name="mod_global__buscando_ubicacion_gps">Obteniendo ubicación ...</string>
    <string name="mod_global__error">Error</string>
    <string name="mod_global__ok">OK</string>
    <string name="mod_global__cancelar">Cancelar</string>
    <string name="mod_global__cerrar">Cerrar</string>
    <string name="mod_global__borrar_filtros">Borrar los filtros</string>
    <string name="mod_global__sin_datos">No hay datos</string>
    <string name="mod_global__sin_contenido">No hay contenido disponible.</string>
    <string name="mod_global__ver">Ver</string>
    <string name="mod_global__no_se_pueden_recuperar_los_datos_del_servidor">No se pueden recuperar
        los datos del servidor
    </string>
    <string name="mod_global__capas">Capas de mapa</string>
    <string name="mod_home__iniciar_sesion">Iniciar sesión</string>
    <string name="mod_home__cerrar_sesion">Cerrar sesión</string>
    <string name="mod_home__descubrir">Descubrir</string>
    <string name="mod_home__pois">Puntos de interés</string>
    <string name="mod_home__rutas">Rutas</string>
    <string name="mod_home__informacion">Información</string>
    <string name="mod_home__jugar">Jugar</string>
    <string name="mod_home__juego_de_pistas">Pistas del juego</string>
    <string name="mod_home__photohide">Photohide</string>
    <string name="mod_home__geocaching">Randocaching</string>
    <string name="mod_home__premios">Premios</string>
    <string name="mod_home__pasaporte">Pasaporte</string>
    <string name="mod_config__activar_avisos">Activar avisos</string>
    <string name="mod_config__configuracion">Configuración</string>
    <string name="mod_about__acerca_de">Cerca de aquí</string>
    <string name="mod_about__texto_acerca_de">Mapping API provided by Esri ArcGIS API for Android.
        Augmented reality powered by Wikitude SDK.
    </string>
    <string name="mod_login__iniciar_sesion">Iniciar sesión</string>
    <string name="mod_login__es_necesario_iniciar_sesion">Debes iniciar sesión para utilizar este
        servicio.
    </string>
    <string name="mod_login__usuario">Email</string>
    <string name="mod_login__contrasena">Contraseña</string>
    <string name="mod_login__iniciando_sesion">Iniciando sesión ...</string>
    <string name="mod_login__registro">Registro</string>
    <string name="mod_login__recuperar_contrasena">recuperar contraseña</string>
    <string name="mod_login__campo_requerido">Campo obligatorio</string>
    <string name="mod_login__contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="mod_login__error_al_iniciar_sesion">Error al iniciar sesión</string>
    <string name="mod_login__no_se_puede_iniciar_sesion">No se pudo iniciar sesión. Correo o
        contraseña incorrectos.
    </string>
    <string name="mod_login__usuario_bloqueado_o_inactivo">La cuenta no ha sido activada todavía o
        ha sido bloqueada.
    </string>
    <string name="mod_register__registro">Registro</string>
    <string name="mod_register__datos_de_usuario">Datos de usuario</string>
    <string name="mod_register__usuario">Usuario</string>
    <string name="mod_register__introduce_usuario">Introduce tu usuario</string>
    <string name="mod_register__email">Email</string>
    <string name="mod_register__introduce_email">Introduice tu correo</string>
    <string name="mod_register__contrasena">Contraseña</string>
    <string name="mod_register__introduce_contrasena">Introduce una contraseña</string>
    <string name="mod_register__repite_contrasena">Confirmar contraseña</string>
    <string name="mod_register__datos_personales">Datos personales</string>
    <string name="mod_register__nombre">Nombre</string>
    <string name="mod_register__introduce_nombre">Introduce tu nombre</string>
    <string name="mod_register__apellidos">Apellidos</string>
    <string name="mod_register__introduce_apellidos">Introduce tus apellidos</string>
    <string name="mod_register__pais">País</string>
    <string name="mod_register__ccaa">Comunidad autónoma</string>
    <string name="mod_register__cancelar">Cancelar</string>
    <string name="mod_register__deseas_crear_tu_cuenta">¿Deseas crear la cuenta?</string>
    <string name="mod_register__crear_cuenta">crear una cuenta</string>
    <string name="mod_register__campos_vacios">hay campos vacíos</string>
    <string name="mod_register__por_favor_rellena_el_campo_usuario">Por favor, rellena el campo
        usuario
    </string>
    <string name="mod_register__por_favor_rellena_el_campo_email">Por favor, rellena el campo
        email
    </string>
    <string name="mod_register__campo_email">Campo email</string>
    <string name="mod_register__campo_email_no_valido">La dirección de correo no es válida. Por
        favor, introduce una dirección correcta.
    </string>
    <string name="mod_register__por_favor_rellena_el_campo_contrasena">Por favor, rellena el campo
        contraseña
    </string>
    <string name="mod_register__por_favor_rellena_el_campo_repite_contrasena">Por favor, repite la
        contraseña
    </string>
    <string name="mod_register__contrasenas">Las contraseñas</string>
    <string name="mod_register__las_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="mod_register__debes_seleccionar_un_pais_para_registrarte">Por favor, elige un
        país
    </string>
    <string name="mod_register__comunidad_autonoma">Comunidad Autónoma</string>
    <string name="mod_register__debes_seleccionar_una_ccaa_para_registrarte">Por favor, elige una
        comunidad autónoma
    </string>
    <string name="mod_register__entrando">Entrando...</string>
    <string name="mod_register__error_al_registrar">Error al registrar</string>
    <string name="mod_register__nombre_usuario_email_ya_existen">El nombre de usuario y la
        contraseña ya existen
    </string>
    <string name="mod_register__nombre_usuario_ya_existe">El nombre de usuario ya existe</string>
    <string name="mod_register__email_ya_existe">Este email ya está registrado</string>
    <string name="mod_recover_pass__recuperar_contrasena">Recuperar contraseña</string>
    <string name="mod_recover_pass__al_pulsar_enviar_te_enviaremos_codigo">Indica el email con el
        que te registraste.
    </string>
    <string name="mod_recover_pass__correo_electronico">Email</string>
    <string name="mod_recover_pass__enviar">Enviar</string>
    <string name="mod_recover_pass__campos_vacios">Campos vacios</string>
    <string name="mod_recover_pass__por_favor_rellena_el_campo_correo_electronico">Por favor,
        rellena el campo email
    </string>
    <string name="mod_recover_pass__campo_correo_electronico">Email</string>
    <string name="mod_recover_pass__el_campo_correo_electronico_no_contiene_direccion_valida">La
        dirección de correo no es válida. Por favor, introduce una dirección correcta.
    </string>
    <string name="mod_recover_pass__error_al_recuperar_contrasena">Error al recuperar la
        contraseña
    </string>
    <string name="mod_recover_pass__el_correo_no_existe">el email no existe</string>
    <string name="mod_recover_pass__ocurrido_problema_al_recuperar_contrasena_en_el_servidor">
        Problema al recuperar la contraseña del servidor
    </string>
    <string name="mod_recover_pass__error_al_enviar_tu_email">Error al enviar el email.</string>
    <string name="mod_recover_pass__en_breves_momentos_recibiras_un_correo_con_codigo">EN breves
        momentos recibiras un correo con el codigo de validación
    </string>
    <string name="mod_recover_pass__introduce_codigo">Introduce el código</string>
    <string name="mod_recover_pass__introduce_nueva_contrasena">Introduce una nueva contraseña
    </string>
    <string name="mod_recover_pass__repite_nueva_contrasena">Repite la contraseña</string>
    <string name="mod_recover_pass__reestablecer_contrasena">Reestablecer la contraseña</string>
    <string name="mod_recover_pass__enviando">Enviando...</string>
    <string name="mod_recover_pass__por_favor_introduce_codigo_enviado">Por favor, introduce el
        código que te hemos enviado
    </string>
    <string name="mod_recover_pass__codigo_erroneo">Mauvais code</string>
    <string name="mod_recover_pass__por_favor_introduce_un_codigo_valido">Introduce un código
        valido
    </string>
    <string name="mod_recover_pass__por_favor_introduce_una_contrasena">Introduce una contraseña
    </string>
    <string name="mod_recover_pass__por_favor_repite_la_contrasena">Repite la contraseña</string>
    <string name="mod_recover_pass__contrasenas">Contraseñas</string>
    <string name="mod_recover_pass__las_contrasenas_que_has_introducido_no_coinciden">Las
        contraseñas cno coinciden.
    </string>
    <string name="mod_recover_pass__contrasena_cambiada_con_exito">Contraseña cambiada con éxito
    </string>
    <string name="mod_recover_pass__error_al_reestablecer_contrasena">Error al reestablecer la
        contraseña
    </string>
    <string name="mod_discover__pois_cercanos">Puntos de interés cercanos</string>
    <string name="mod_discover__courtaus_cercanos">Courtarous cercanos</string>
    <string name="mod_discover__buscar_pois">Buscar pois...</string>
    <string name="mod_discover__buscar_rutas">Buscar rutas...</string>
    <string name="mod_discover__buscar">Buscar</string>
    <string name="mod_discover__todas_las_categorias">Todas</string>
    <string name="mod_discover__courtaou">Courtarou</string>
    <string name="mod_discover__selecciona_categoria">Selecciona una categoría</string>
    <string name="mod_discover__rutas">Rutas</string>
    <string name="mod_discover__mapa">Mapa</string>
    <string name="mod_discover__listado">Lista</string>
    <string name="mod_discover__camara">RA</string>
    <string name="mod_discover__checkin">Comentarios</string>
    <string name="mod_discover__valorar">Valorar</string>
    <string name="mod_discover__compartir">Compartir</string>
    <string name="mod_discover__eventos">Eventos</string>
    <string name="mod_discover__ver_en_mapa">Ver en el mapa</string>
    <string name="mod_discover__distancia">Distancia :</string>
    <string name="mod_discover__desnivel">Desnivel :</string>
    <string name="mod_discover__duracion">Duración :</string>
    <string name="mod_discover__valoracion">Valoración :</string>
    <string name="mod_discover__dificultad">Dificultad :</string>
    <string name="mod_discover__nota">Nota :</string>
    <string name="mod_discover__telecargar_ruta">Descargar ruta</string>
    <string name="mod_discover__telecargar_poi">Descargar punto de interés</string>
    <string name="mod_discover__telecarga_completada_titulo">Descarga completada</string>
    <string name="mod_discover__telecarga_completada_info">¡Se ha descargado con éxito!</string>
    <string name="mod_home__btn_orientation">Parcours\nd\'orientation</string>
    <string name="mod_home__btn_discover">Parcours\nde découverte</string>
    <string name="mod_discover__txt_info">Texte du jeu</string>
    <string name="mod_discover__duration">Durée</string>
    <string name="mod_discover__distance">Distance</string>
    <string name="mod_discover__gallery">Galerie</string>
    <string name="options">Options</string>
    <string name="lang">Langue</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="splash_title">Payolle\'s secrets</string>
</resources>