<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_gravity="top"
            android:id="@+id/layout_header">

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/btn_return"
                android:background="@drawable/btn_return"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/options"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true">
            </TextView>

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/boton_accueil"
                android:id="@+id/btn_home"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/fondo_accueil"
            android:weightSum="5">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang"
                android:textAlignment="center"
                android:gravity="center|bottom"
                android:textColor="@color/color_blanco"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/lang_fr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/french" />

                <Button
                    android:id="@+id/lang_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/english" />
                <Button
                    android:id="@+id/lang_es"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/spanish" />
            </LinearLayout>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Autre"-->
                <!--android:textAlignment="center"-->
                <!--android:gravity="center|bottom"-->
                <!--android:textColor="@color/color_blanco"-->
                <!--android:textSize="18sp"-->
                <!--android:layout_margin="20dp"-->
                <!--android:layout_weight="1"/>-->
            <!--<Button-->
                <!--android:id="@+id/clear_cache"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_margin="10dp"-->
                <!--android:text="Vider le cache"/>-->
        </LinearLayout>

    </LinearLayout>

</FrameLayout>