<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mod_feed.HomeActivity"
    android:background="@drawable/fondo_accueil">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/splash_title"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_centerVertical="true">
        </TextView>
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icono_settings"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/boton_orientation_fondo_new"
        android:clickable="true"
        android:id="@+id/btn_orientation"
        >
        <!--Use image view for not image deformation-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/mod_home__btn_orientation"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:gravity="end"
                android:textStyle="bold"
                android:layout_marginRight="25dp"
                android:maxLines="2"
                android:layout_marginEnd="16dp"
                android:layout_gravity="top"
                android:paddingTop="16dp" />
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/icono_orientation"
                android:layout_marginEnd="16dp"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/boton_decouverte_fondo_new"
        android:clickable="true"
        android:id="@+id/btn_discover">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/icono_decouverte"
                android:gravity="bottom|end|start"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/mod_home__btn_discover"
                android:textAllCaps="true"
                android:id="@+id/btn_discover_txt"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:paddingBottom="16dp"
                android:layout_gravity="start|bottom"/>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>